# foreign_object_detector

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp  math.cpp  math.hpp
test/: CMakeLists.txt  test.cpp
